tests/cli/apply/snapshots/main__cli__apply__common__apply_fails_if_both_down_and_reset_args_provided.snap
---
source: tests/cli/apply/common.rs
expression: stderr
---
error: the argument '--down <DOWN>' cannot be used with '--reset'

Usage: surrealdb-migrations apply --down <DOWN>

For more information, try '--help'.
