tests/cli/apply/snapshots/main__cli__apply__common__apply_fails_if_both_redo_and_reset_args_provided.snap
---
source: tests/cli/apply/common.rs
expression: stderr
---
error: the argument '--redo <REDO>' cannot be used with '--reset'

Usage: surrealdb-migrations apply --redo <REDO>

For more information, try '--help'.
