tests/cli/apply/snapshots/main__cli__apply__common__apply_fails_if_both_up_and_reset_args_provided.snap
---
source: tests/cli/apply/common.rs
expression: stderr
---
error: the argument '--up <UP>' cannot be used with '--reset'

Usage: surrealdb-migrations apply --up <UP>

For more information, try '--help'.
